[package]
name = "sbi-rt"
description = "Simple RISC-V SBI runtime primitives"
version = "0.0.0"
authors = [
    "YdrMaster <ydrmaster@hotmail.com>",
    "Luo Jia <me@luojia.cc>",
]
repository = "https://github.com/rustsbi/sbi-rt"
documentation = "https://docs.rs/sbi-rt"
license = "MulanPSL-2.0 OR MIT"
readme = "README.md"
keywords = ["riscv", "sbi", "rustsbi"]
categories = ["os", "embedded", "hardware-support", "no-std"]
edition = "2021"

[package.metadata.docs.rs]
default-target = "riscv64imac-unknown-none-elf"
targets = [
    "riscv32imac-unknown-none-elf", "riscv64imac-unknown-none-elf",
]

[dependencies]
sbi-spec = "0.0.2"
