[package]
name = "sbi-rt"
version = "0.0.1"
edition = "2021"
description = "Runtime library for supervisors to call RISC-V Supervisor Binary Interface (RISC-V SBI)"
categories = ["os", "embedded", "hardware-support", "no-std"]
keywords = ["riscv", "sbi", "rustsbi"]
authors = [
    "YdrMaster <ydrmaster@hotmail.com>",
    "Luo Jia <me@luojia.cc>",
]
repository = "https://github.com/rustsbi/sbi-rt"
documentation = "https://docs.rs/sbi-rt"
license = "MulanPSL-2.0 OR MIT"
readme = "README.md"

[package.metadata.docs.rs]
default-target = "riscv64imac-unknown-none-elf"
targets = [
    "riscv32imac-unknown-none-elf", "riscv64imac-unknown-none-elf",
]

[dependencies]
sbi-spec = "0.0.3"
